--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "npm": "^2.7.0",
     "qrcode-npm": "0.0.3",
     "stream-throttle": "^0.1.3",
-    "ws": "^0.4.32"
+    "ws": "^0.4.32",
+    "http-auth": "^2.2.8"
   },
   "devDependencies": {
     "proxy-eval": ">=1.1.1"
